tests/typeapp_import/typeapp_import.exp
Error ------------------------------------------------------------------------------------------------------ main.js:5:6

Cannot cast `y` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   main.js:5:6
   5|     (y: number); // error string ~> number
           ^

References:
   main.js:3:19
   3| (x: C<number> | C<string>) => {
                        ^^^^^^ [1]
   main.js:5:9
   5|     (y: number); // error string ~> number
              ^^^^^^ [2]



Found 1 error
